fix: Optimize getLessonContentsProgress to query contents once before querying progress - Query all contents first, then query progress in one batch - This ensures proper mapping between content IDs and progress data - Fixes issue where progress data exists in DB but not returned in API response